--- a/locales/hu.json
+++ b/locales/hu.json
@@ -11,7 +11,8 @@
     "description": "Ez itt a BRouter útvonaltervező motor online szolgáltatása. Az Android alkalmazásról és a további információkról a <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a> oldalon olvashat.",
     "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Adatvédelmi irányelvek</a></i> \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">stáblista</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">változásnapló</a></i> és\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">további tájékoztatás</a></i> a kliensen.",
     "support": "Általános viták/kérdések, támogatás",
-    "title": "Névjegy"
+    "title": "Névjegy",
+    "tooltip": "Show more information about BRouter-Web"
   },
   "credits": {
     "brouter": "BRouter",
@@ -41,6 +42,7 @@
     "ascend": "Összes szintkülönbség",
     "cost": "Ráfordítás",
     "distance": "Távolság",
+    "elevation-chart": "Toggle elevation chart",
     "energy-per-100km": "Energia / 100 km",
     "hours": "óra",
     "hours-abbrev": "h",
@@ -55,6 +57,12 @@
     "stats-info": "Start drawing a route to get stats.",
     "total-energy": "Teljes energiafelhasználás",
     "travel-time": "Utazási idő"
+  },
+  "keyboard": {
+    "backspace": "Backspace",
+    "escape": "Escape",
+    "generic-shortcut": "{{action}} ({{key}} key)",
+    "shift": "Shift"
   },
   "layers": {
     "add-base": "Alapréteg hozzáadása",
@@ -86,11 +94,13 @@
     "delete-nogo-areas": "Minden elkerülendő terület törlése",
     "delete-pois": "Minden érdekes pont (POI) törlése",
     "delete-route": "Útvonal törlése",
-    "draw-poi-start": "Érdekes pont (POI) rajzolása (P billentyű)",
-    "draw-poi-stop": "Érdekes pontok (POI-k) rajzolásának megszakítása (ESC)",
-    "draw-route-start": "Útvonal rajzolása (D billentyű)",
-    "draw-route-stop": "Útvonal rajzolásának megszakítása (ESC billentyű)",
+    "draw-poi-start": "Draw points of interest",
+    "draw-poi-stop": "Stop drawing points of interest",
+    "draw-route-start": "Draw route",
+    "draw-route-stop": "Stop drawing route",
     "enter-poi-name": "Érdekes pont (POI) nevének megadása",
+    "geocoder": "Search",
+    "geocoder-placeholder": "Search…",
     "hikebike-hillshading": "Domborzatárnyékolás",
     "hiking": "Túrázás",
     "layer": {
@@ -114,19 +124,22 @@
     "nogo": {
       "cancel": "Elkerülendő terület rajzolásának megszakítása",
       "click-drag": "Kör rajzolása kattintással és húzással",
-      "draw": "Elkerülendő terület rajzolása (kör)",
+      "draw": "Draw circular no-go area",
       "edit": "Szerkesztés kattintással",
       "help": "&square; = áthelyezés / átméretezés, <span class=\"fa fa-trash-o\"></span> = törlés,<br>a szerkesztés befejezéséhez kattintson a körre"
     },
-    "opacity-slider": "Set transparency of route track and markers. Press and hold the 'M' key to temporarily hide the planned route.",
+    "opacity-slider": "Set transparency of route track and markers",
+    "opacity-slider-shortcut": "{{action}}\n(Hold {{key}} key to mute temporarily)",
     "preview": "Előnézet",
     "privacy": "Adatvédelem",
     "reverse-route": "Útvonal megfordítása",
     "route-quality-altitude": "Magasság kódolása",
     "route-quality-cost": "Ráfordítás kódolása",
     "route-quality-incline": "Lejtés kódolása",
+    "route-quality-shortcut": "{{action}} ({{key}} key to toggle)",
     "strava-biking": "Strava motoros útvonalszakaszok megjelenítése",
     "strava-running": "Strava futó útvonalszakaszok megjelenítése",
+    "strava-shortcut": "{{action}}\n({{key}} key to toggle layer, click to reload for current area)",
     "zoomInTitle": "Nagyítás",
     "zoomOutTitle": "Kicsinyítés"
   },
@@ -142,10 +155,12 @@
       "third": "3. alternatíva"
     },
     "export": "Exportálás",
+    "export-tooltip": "Export route",
     "load": {
-      "nogos": "Elkerülendő területek",
+      "nogos": "Load no-go areas",
       "title": "Betöltés",
-      "tracks": "Nyomvonalak"
+      "tooltip": "{{tracksAction}} ({{tracksKey}} key)\n{{nogosAction}} ({{nogosKey}})",
+      "tracks": "Load tracks"
     },
     "profile": {
       "car-eco": "Személyautó (gazdaságos)",
@@ -168,7 +183,8 @@
       "trekking-steep": "Túrakerékpár (meredek)",
       "vm-forum-liegerad-schnell": "Rekumbens kerékpár (gyors)",
       "vm-forum-velomobil-schnell": "Velomobil (aerodinamikus kerékpár, gyors)"
-    }
+    },
+    "profile-tooltip": "\n({{key}} key to switch)"
   },
   "sidebar": {
     "analysis": {
@@ -183,17 +199,21 @@
         "total_known": "Total Known:",
         "unknown": "Unknown"
       },
-      "title": "Analysis"
+      "title": "Analysis",
+      "tooltip": "Analyse route"
     },
     "customize-profile": {
-      "title": "Profil testreszabása"
+      "title": "Profil testreszabása",
+      "tooltip": "Customize profile"
     },
     "data": {
       "sync-map": "Térkép szinkronizálása",
-      "title": "Adatok"
+      "title": "Adatok",
+      "tooltip": "Show detailed route data table"
     },
     "itinerary": {
-      "title": "Útiterv"
+      "title": "Útiterv",
+      "tooltip": "Show itinerary"
     },
     "layers": {
       "category": {
@@ -219,7 +239,8 @@
         "name": "Név",
         "type": "Típus"
       },
-      "title": "Rétegek"
+      "title": "Rétegek",
+      "tooltip": "Select layers"
     },
     "profile": {
       "apply": "Alkalmaz",
@@ -229,9 +250,21 @@
       "options": "Beállítások",
       "placeholder": "Ide írhatja egyedi profilját",
       "profile": "Profil"
-    }
+    },
+    "tab-tooltip": "{{action}}\n({{toggleKey}} key to toggle, {{switchKey}} to switch to next tab)"
   },
   "title": "BRouter webkliens",
+  "trackasroute": {
+    "explainpoi": "(show waypoints as POI's)",
+    "explaintracklayer": "(show Track as separate Layer)",
+    "file": "Trackfile",
+    "fuzziness": "fuzzines",
+    "pleasewait": "Please wait!",
+    "showpois": "POI's",
+    "title": "Load Track as Route",
+    "tracklayer": "Track Layer",
+    "tuning": "Tuning"
+  },
   "warning": {
     "cannot-get-route": "Hiba történt az útvonal URL-jének beolvasásakor",
     "no-response": "a kiszolgáló nem válaszol",
